<resources>
    <string name="app_name">CIautomotive</string>
    <string name="shared_prefs">CIautomotive</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="splash_text">CI Automotives</string>

    <string name="phonenumber_edittext">Phonenumber</string>
    <string name="phonenumber_button">submit</string>

    <string name="pin_edittext">pin</string>
    <string name="next_button">next</string>

    <string name="title_activity_pin_verify">PinVerifyActivity</string>
    <string name="pref_phonenumber">phonenumber</string>


    <string name="save_user_name">name</string>
    <string name="save_user_email">email</string>
    <string name="token">token</string>
    <string name="expires">expires</string>
    <string name="secret">secret</string>
    <string name="invalid_pin">Please Enter 5 digit pin</string>
    <string name="incorrect_pin">Incorrect Pin</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="wrong_phonenumber">Please enter a proper phonenumber</string>
    <string name="call_issue">There Was a Problem please try later</string>
    <string name="wrong_pin">Please Verify Pin</string>
    <string name="no_name">Please Enter Name</string>
    <string name="no_name_email">Please Enter Name and Email</string>
    <string name="no_email">Please Enter Email</string>
    <string name="add_car">Add Car</string>
    <string name="car_name">Car Name</string>
    <string name="model_name">Model (Year)</string>
    <string name="device_id">OBD Device Serial</string>
    <string name="mileage">Estimated Mileage</string>
    <string name="add_car_next">Add</string>
    <string name="fill_all">Please fill all the fields</string>
    <string name="not_allowed">Operation Not Allowed</string>
    <string name="delete_car_alert">Are you sure you want to delete this car</string>
    <string name="positive_alert">Yes</string>
    <string name="cancel_alert">No</string>
    <string name="deleted_car">Car Deleted</string>
    <string name="title_activity_maps">Map</string>
    <string name="stop_trip">STOP TRIP</string>
    <string name="begin_trip">BEGIN TRIP</string>
    <string name="e_mail">E-Mail</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="bluetooth_unable_connect">Unable To Connect</string>
    <string name="fcm_token">fcm_token</string>


</resources>
